<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="italic"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/textResults1"
        android:layout_width="410dp"
        android:layout_height="154dp"
        android:layout_marginTop="20dp"
        android:background="#66F9B0"
        android:text="@string/todos"
        android:textColor="#00695C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textResults2"
        android:layout_width="410dp"
        android:layout_height="154dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="276dp"
        android:background="#666DF9"
        android:text="@string/posts"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResults1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textResults3"
        android:layout_width="410dp"
        android:layout_height="154dp"
        android:layout_marginTop="20dp"
        android:background="#F466F9"
        android:text="@string/albums"
        android:textColor="#4A148C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResults2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonGetTodo"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:background="@drawable/round_button"
        android:text="@string/get"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textTitle"
        app:layout_constraintEnd_toStartOf="@+id/buttonGetPost"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResults3"
        app:layout_constraintVertical_bias="0.638"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/buttonGetPost"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:background="@drawable/round_button_2"
        android:text="@string/get"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResults3"
        app:layout_constraintVertical_bias="0.638"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonGetAlbum"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:background="@drawable/round_button_3"
        android:text="@string/get"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/buttonGetPost"
        app:layout_constraintTop_toBottomOf="@+id/textResults3"
        app:layout_constraintVertical_bias="0.638"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>